@@ -2,8 +2,8 @@ package uk.gov.hmcts.reform.iacasenotificationsapi.domain.service;
 
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
-import org.apache.commons.lang3.StringUtils;
+
+import lombok.extern.slf4j.Slf4j;
 import uk.gov.hmcts.reform.iacasenotificationsapi.domain.ApplicationContextProvider;
 import uk.gov.hmcts.reform.iacasenotificationsapi.domain.entities.AsylumCase;
 import uk.gov.hmcts.reform.iacasenotificationsapi.domain.entities.ccd.callback.Callback;
@@ -12,6 +12,9 @@ import uk.gov.hmcts.reform.iacasenotificationsapi.domain.personalisation.EmailNo
 import uk.gov.hmcts.reform.iacasenotificationsapi.infrastructure.CustomerServicesProvider;
 import uk.gov.hmcts.reform.iacasenotificationsapi.infrastructure.clients.GovNotifyNotificationSender;
 
+import static uk.gov.hmcts.reform.iacasenotificationsapi.infrastructure.EmailAddressFinder.NO_EMAIL_ADDRESS_DECISION_WITHOUT_HEARING;
+
+@Slf4j
 public class EmailNotificationGenerator implements NotificationGenerator {
 
     protected final List<EmailNotificationPersonalisation> personalisationList;
@@ -54,13 +57,13 @@ public class EmailNotificationGenerator implements NotificationGenerator {
         Set<String> subscriberEmails = emailNotificationPersonalisation.getRecipientsList(asylumCase);
 
         return subscriberEmails.stream()
-            .filter(StringUtils::isNotBlank)
-            .map(email ->
-                sendEmail(
-                    email,
-                    emailNotificationPersonalisation,
-                    referenceId,
-                    callback)).collect(Collectors.toList());
+            .filter(this::isValidEmailAddress)
+            .map(email -> sendEmail(
+                email,
+                emailNotificationPersonalisation,
+                referenceId,
+                callback)
+            ).toList();
     }
 
     protected String sendEmail(
@@ -81,4 +84,12 @@ public class EmailNotificationGenerator implements NotificationGenerator {
         );
     }
 
+    private boolean isValidEmailAddress(String email) {
+        if (email.equals(NO_EMAIL_ADDRESS_DECISION_WITHOUT_HEARING)) {
+            log.warn("Invalid email address {}", email);
+            return false;
+        }
+
+        return true;
+    }
 }
